--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap" rel="stylesheet">
     <title>Home - Morrent</title>
   </head>
-  <body>
+  <body class="bg-[#f6f7f9]">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
